target/classes/deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: satellite-investigator
  labels:
    name: satellite-investigator
spec:
  ports:
    - nodePort: 30163
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: satellite-investigator
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satellite-investigator
spec:
  selector:
    matchLabels:
      app: satellite-investigator
  replicas: 3
  template:
    metadata:
      labels:
        app: satellite-investigator
    spec:
      containers:
        - name: satellite-investigator
          image: satellite-investigator:1.0
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-conf  # name of configMap
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-conf
                  key: name
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: db-credentials # Secret Name
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: db-credentials
                  key: password
