target/classes/external-name-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: satellitemgtdb.cngwyncgh82g.us-east-1.rds.amazonaws.com
